Homepage: UI fixes
* Set min-width and max-width for the main homepage container
  so the content does not overlap on small windows or stretch
  too much on large ones.

* Set border color for blue email icon.

Bug: T217105
Bug: T222003

--- a/modules/homepage/ext.growthExperiments.Homepage.less
+++ b/modules/homepage/ext.growthExperiments.Homepage.less
@@ -12,6 +12,8 @@
 
 .growthexperiments-homepage-container {
 	display: flex;
+	min-width: 860px;
+	max-width: 1215px;
 }
 
 .growthexperiments-homepage-group-main {
