--- a/modules/homepage/ext.growthExperiments.StartModule.less
+++ b/modules/homepage/ext.growthExperiments.StartModule.less
@@ -111,6 +111,7 @@
 			&.growthexperiments-homepage-email-unconfirmed {
 				.growthexperiments-homepage-module-header-icon {
 					background-color: @colorProgressive;
+					border-color: @colorProgressive;
 				}
 			}
 		}
